src/test/resources/should-compile/general-matrix-multiply-one-unroll.se
decl m1: float[32][32 bank 32];
decl m2: float[32 bank 32][32];
decl prod: float[32][32];

for (let i = 0..32) {
  for (let j = 0..32) {
    for(let k = 0..32) unroll 32 {
      let mult = m1[i][k] * m2[k][j];
    } combine {
      prod[i][j] += mult;
    }
  }
}
